@@ -3,8 +3,9 @@ Version CVS HEAD (?)
   * src/gig.cpp, src/gig.h:
     - experimental support for Gigasampler v3 format;
       64 bit file offsets are truncated to 32 bit, 24 bit samples are
-      truncated to 16 bit and additional articulation informations are
-      ignored at the moment (patch by Andreas Persson)
+      truncated to 16 bit, up to 8 dimensions are read, additional
+      articulation informations are ignored at the moment
+      (patch by Andreas Persson)
     - added some file format compatibility checks
     - fixed vcf_type_lowpassturbo value (vcf_type_lowpassturbo was actually
       never used, because the necessary check was made before
